--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>IT Student Portal</title>
+		<title>Informatika Student Portal</title>
 
 		<!-- CSS -->
         <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
@@ -28,7 +28,8 @@
 									<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="120px" height="120px"/>
 								</div>
 								</center>
-								<h2 class="text-center">IT Student Portal</h2> 
+								<br>
+								<h4 class="text-center">INFORMATIKA STUDENT PORTAL</h4> 
 								<h5 class="text-center">Portal Akademik Mahasiswa</h5>
 								<h5 class="text-center">Teknik Informatika UNPAR</h5>
 							</div>
