Menambahkan logo Informatika dan fix issue angkatan 2015

--- a/app/StudentPortal/app/views/jadwalKuliah.scala.html
+++ b/app/StudentPortal/app/views/jadwalKuliah.scala.html
@@ -24,7 +24,7 @@
 					</button>
 					<div class="logo-set">
 						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
-						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
+						<img src="@routes.Assets.versioned("images/logo-IT.png")" width="25%" height="25%"/>
 					</div>
 					<p class="navbar-brand">INFORMATIKA STUDENT PORTAL</p>
 				</div>
