--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -24,7 +24,7 @@
 							<div class="page-header">
 								<center>
 								<div class="logo-set">
-									<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="120px" height="120px"/>
+									<img src="@routes.Assets.versioned("images/logo-IT.png")" width="120px" height="120px"/>
 									<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="120px" height="120px"/>
 								</div>
 								</center>
