--- a/app/StudentPortal/app/views/prasyarat.scala.html
+++ b/app/StudentPortal/app/views/prasyarat.scala.html
@@ -24,7 +24,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<div class="logo-set">
-						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
+						<img src="@routes.Assets.versioned("images/logo-IT.png")" width="25%" height="25%"/>
 						<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
 					</div>
 					<p class="navbar-brand">INFORMATIKA STUDENT PORTAL</p>
