--- a/app/StudentPortal/app/views/ringkasan.scala.html
+++ b/app/StudentPortal/app/views/ringkasan.scala.html
@@ -66,10 +66,10 @@
 			<div class="container-fluid">
 				<div class="row">
                     <div class="col-lg-12">
-						IPS: @ringkasan.getIPS()<br>
+						IPS @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
 						IPK: @ringkasan.getIPK()<br>
-						sks lulus: @ringkasan.getSKSLulus()<br>
-						Sisa sks untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
+						SKS lulus: @ringkasan.getSKSLulusTotal()<br>
+						Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
 						
 						<div class="panel panel-default">
 							<div class="panel-body">
