--- a/app/StudentPortal/app/views/jadwalUAS.scala.html
+++ b/app/StudentPortal/app/views/jadwalUAS.scala.html
@@ -64,7 +64,7 @@
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
 				<div class="row">
-					<h2 class="text-center">JADWAL KULIAH</h2> 
+					<h2 class="text-center">JADWAL UAS</h2> 
 					<h4 class="text-center">SEMESTER semester</h4>
 				</div>
 				@if(jadwalUAS.isUASEmpty()){
