--- a/app/StudentPortal/app/views/jadwalUTS.scala.html
+++ b/app/StudentPortal/app/views/jadwalUTS.scala.html
@@ -64,7 +64,7 @@
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
 				<div class="row">
-					<h2 class="text-center">JADWAL KULIAH</h2> 
+					<h2 class="text-center">JADWAL UTS</h2> 
 					<h4 class="text-center">SEMESTER semester</h4>
 				</div>
 				@if(jadwalUTS.isUTSEmpty()){
@@ -72,7 +72,7 @@
 						<h5 style="color: gray;">JADWAL UTS BELUM TERSEDIA <span class="glyphicon glyphicon-exclamation-sign"></span></h5>
 					</div>	
 				}else{
-				
+					OK
 				}
 			</div>
 		</div>
