--- a/app/StudentPortal/app/views/jadwalKuliah.scala.html
+++ b/app/StudentPortal/app/views/jadwalKuliah.scala.html
@@ -11,6 +11,7 @@
 		<!-- CSS -->
         <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")"> 
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/fullcalendar.css")"> 
     </head>
     <body>
 		<nav class="navbar navbar-inverse sidebar" role="navigation">
@@ -294,6 +295,7 @@
 		<!-- Javascript -->
 		<script src="@routes.Assets.versioned("javascripts/jquery-1.11.3.min.js")"></script>
 		<script src="@routes.Assets.versioned("javascripts/script.js")"></script>
+		<script src="@routes.Assets.versioned("javascripts/fullcalendar.js")"></script>
 		<script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
     </body>
 </html>
