--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -48,7 +48,7 @@
 										<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span>
 									</div>
 								</div>
-								<p class="text-center error-message">@message</p>
+								  @Html(message)
 								<button name="submit" type="submit" class="form-control">Login <span class="glyphicon glyphicon-log-in"></span></button>
 							</form>
 						</div>	
